dataset1235/2025-2/805158916/users/1514794398/executions/2651470117_2132966528.log
== RUN (2025-08-22 17:59:12)
-- CODE: 
input = seliinha

print(texto.upper(""))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input = seliinha
            ^^^^^^^^
NameError: name 'seliinha' is not defined
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input = seliinha
            ^^^^^^^^
NameError: name 'seliinha' is not defined
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input = seliinha
            ^^^^^^^^
NameError: name 'seliinha' is not defined
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input = seliinha
            ^^^^^^^^
NameError: name 'seliinha' is not defined
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input = seliinha
            ^^^^^^^^
NameError: name 'seliinha' is not defined
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input = seliinha
            ^^^^^^^^
NameError: name 'seliinha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:31:58)
-- CODE: 
input("Digite um nome:")

print(texto.upper(""))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:55:46)
-- CODE: 
print(texto.upper("insira um nome"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper("insira um nome"))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper("insira um nome"))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper("insira um nome"))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper("insira um nome"))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper("insira um nome"))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper("insira um nome"))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:55:11)
-- CODE: 
print(texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:37:35)
-- CODE: 
nome = input("Digite seu mome:")

print(nome.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite seu mome:DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite seu mome:MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite seu mome:SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite seu mome:BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite seu mome:HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite seu mome:PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:37:38)
-- CODE: 
nome = input("Digite seu mome:")

print(nome.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite seu mome:DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite seu mome:MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite seu mome:SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite seu mome:BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite seu mome:HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite seu mome:PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:55:07)
-- CODE: 
print(texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:36:04)
-- CODE: 
nome = input("Digite seu mome")

print(texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 17:55:51)
-- CODE: 
print(texto.upper("insira um nome"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper("insira um nome"))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper("insira um nome"))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper("insira um nome"))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper("insira um nome"))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper("insira um nome"))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper("insira um nome"))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 17:58:03)
-- CODE: 
nome = input("digite um nome")
print(texto.upper(""))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:59:13)
-- CODE: 
input = seliinha

print(texto.upper(""))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input = seliinha
            ^^^^^^^^
NameError: name 'seliinha' is not defined
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input = seliinha
            ^^^^^^^^
NameError: name 'seliinha' is not defined
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input = seliinha
            ^^^^^^^^
NameError: name 'seliinha' is not defined
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input = seliinha
            ^^^^^^^^
NameError: name 'seliinha' is not defined
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input = seliinha
            ^^^^^^^^
NameError: name 'seliinha' is not defined
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input = seliinha
            ^^^^^^^^
NameError: name 'seliinha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:30:37)
-- CODE: 
nome = input("Digite um nome:")

print(texto.upper(""))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:37:54)
-- CODE: 
nome = input("Digite seu nome:")

print(nome.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite seu nome:DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite seu nome:MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite seu nome:SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite seu nome:BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite seu nome:HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite seu nome:PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:55:45)
-- CODE: 
print(texto.upper("insira um nome"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper("insira um nome"))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper("insira um nome"))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper("insira um nome"))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper("insira um nome"))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper("insira um nome"))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper("insira um nome"))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:37:55)
-- CODE: 
nome = input("Digite seu nome:")

print(nome.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite seu nome:DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite seu nome:MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite seu nome:SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite seu nome:BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite seu nome:HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite seu nome:PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:57:11)
-- CODE: 
nome = input("digite um nome")
print(texto.upper(""))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper(""))
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:37:20)
-- CODE: 
nome = input("Digite seu mome")

print(nome.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite seu momeDEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite seu momeMARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite seu momeSELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite seu momeBILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite seu momeHOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite seu momePRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:38:08)
-- CODE: 
nome = input("Digite seu nome:")

print(nome.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite seu nome:DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite seu nome:MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite seu nome:SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite seu nome:BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite seu nome:HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite seu nome:PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
